# synthetic-healthlake

./: .coverage  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_CHECKLIST.md  README.md  SESSION_5.3_COMPLETION.md  SESSION_6.2_COMPLETION.md  TODO.md  main.py  mkdocs.yml  pyproject.toml  ruff-report.json
.beads/: issues.jsonl
.clinerules/: markdownlint-compliance.md
.github/: OIDC_SETUP.md  dependabot.yml  oidc-role.yml
.github/ISSUE_TEMPLATE/: phase-task.md
.github/workflows/: cdk-deploy.yml  dbt-tests.yml  dependency-scan.yml  synthetic-smoke.yml
cdk/: .eslintrc.json  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: fhir-omop-stack.ts  health-platform-stack.ts  step-functions-pipeline.ts
dbt/fhir_omop_dbt/: .user.yml  dbt_project.yml
dbt/legacy_athena/: profiles.example.yml  profiles.yml
dbt/snowflake/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
docker/: docker-compose.yml
docker/dbt-runner/: Dockerfile
docker/synthetic-generator/: Dockerfile
docs/: CODING_STANDARDS.md  DATA_QUALITY_STRATEGY.md  FAQ.md  OBSERVABILITY_PLAN.md  OPERATIONS.md  PIPELINE_SLO_SLA.md  SECURITY.md  SUMMARY.md  THREAT_MODEL.md  index.md
docs/.claude/: settings.local.json
docs/api/: openapi.yaml
docs/architecture/: design-decisions.md  overview.md
docs/data/: data-lineage-overview.md  data-quality-strategy.md  sample-dataset.md  validation-framework.md
docs/deployment/: AWS_DEPLOYMENT.md  INFRASTRUCTURE_VALIDATION.md
docs/development/: LOCAL_DEVELOPMENT.md  beads-installation.md  changelog.md  coding-standards.md  contributing.md  env-variable-naming-convention.md  release-checklist.md  release.md
docs/diagrams/: high-level-architecture.mmd  infra-architecture.mmd  metrics-layer.md  synthetic-data-pipeline.md
docs/governance/: access-control-matrix.md  data-governance-plan.md  governance.md  risk-register.md  threat-model.md
docs/operations/: cost-analysis.md  cost-management-strategy.md  observability-plan.md  performance.md
docs/plan/: 4-week-plan.md  step-01-generate-synthea-data.md  step-02-lambda-project-structure.md  step-03-lambda-implementations.md  step-04-sam-template.md  step-05-local-testing.md  step-06-deploy-and-test.md  step-07-api-project-structure.md  step-08-shared-utilities.md  step-09-lambda-authorizer.md  step-10-fhir-api-implementation.md  step-11-api-sam-template-rbac.md  step-12-ingestion-api.md  step-13-observability-tui.md
docs/reference/: api-specification.md  iceberg-ddl.md  lineage-macro.md  metrics-layer.md
docs/security/: SECURITY_CHECKLIST.md  dependency-scanning.md  deployment-checklist.md  iam-best-practices.md  network-security.md  secrets-management.md
docs/tutorial/: GETTING_STARTED.md
health_platform/api/: requirements.txt
health_platform/utils/: db.py
history/: ACTION_PLAN.md  INTEGRATION_STRATEGY.md  LESSONS_LEARNED.md  PLANNING_CONSOLIDATION.md  SESSION_4_AND_6.1_COMPLETION.md  SESSION_5.6_COMPLETION.md
iceberg-ddl/: fhir_patient_flat_iceberg.sql  person_iceberg.sql
output/fhir/: patients.ndjson
output/omop/: condition_occurrence.parquet  measurement.parquet  person.parquet
platform/snowflake/: README.md
scripts/: cleanup.sh  env-load.sh  generate-sample-dataset.sh  run-dbt.sh  run_dbt_pipeline.sh  run_synthetic_pipeline.sh  security-scan.sh  smoke-test.sh  test_db_connection.py  verify_ingestion_local.py
scripts/beads-helpers/: README.md  md2jsonl.py
synthetic/: Makefile  __init__.py
synthetic/config/: distribution_profiles.yaml  domain_constraints.yaml  terminology_mappings.yaml
synthetic/docs/: high-level-architecture.mmd  synthetic-data-pipeline.md
synthetic/etl/: __init__.py  flatten_fhir.py  omop_to_parquet.py
synthetic/generators/: __init__.py  fhir_generator.py  (+2 more)
tests/: conftest.py  test_etl.py  test_generators.py  test_validation.py
(+62 files in other folders)
