[project]
name = "synthetic-healthlake"
version = "0.1.0"
description = "FHIR-OMOP Synthetic Stack Reference Architecture"
authors = [{name = "Robert Ford", email = "robert.ford@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "ruff>=0.14.7",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "faker>=20.0.0",
    "pyarrow>=14.0.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "dbt-duckdb>=1.5.0",
]
urls = {Repository = "https://github.com/robandrewford/synthetic-healthlake"}
