[project]
name = "synthetic-healthlake"
version = "0.1.0"
description = "FHIR-OMOP synthetic data pipeline reference architecture"
authors = [{name = "Robert Ford", email = "robert.ford@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "ruff>=0.14.7",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "faker>=20.0.0",
    "pyarrow>=14.0.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "dbt-duckdb>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto[s3]>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=synthetic",
    "--cov-report=term-missing",
    "--cov-report=html",
]
urls = {Repository = "https://github.com/robandrewford/synthetic-healthlake"}
